[package]
name = "fswatch"
authors = ["Michael Helvey"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
clap = { version = "3.1.6", features = ["derive"] }
notify = "4.0.17"
wild = "2.0.4"
regex = "1.5.5"
